--- a/style-rtl.css
+++ b/style-rtl.css
@@ -815,14 +815,16 @@ template {
 }
 
 .entry-content > .alignleft {
-	margin-left: 0;
+	margin-left: var(--responsive--spacing-horizontal);
 	margin-right: var(--responsive--spacing-horizontal);
+	max-width: var(--responsive--aligndefault-width);
 }
 
 @media only screen and (min-width: 482px) {
 	.entry-content > .alignleft {
 		margin-left: var(--responsive--alignleft-margin);
 		margin-right: var(--global--spacing-horizontal);
+		max-width: calc(50% - var(--responsive--alignleft-margin));
 	}
 }
 
@@ -1810,10 +1812,6 @@ a:hover {
 	font: var(--global--font-size-sm);
 }
 
-.wp-block-gallery.alignleft, .wp-block-gallery.alignright {
-	max-width: 50%;
-}
-
 .wp-block-group .wp-block-group__inner-container {
 	margin-right: auto;
 	margin-left: auto;
@@ -2714,10 +2712,6 @@ table.is-style-stripes tbody tr:nth-child(odd),
 	margin-top: 0;
 	margin-right: var(--global--spacing-horizontal);
 	margin-bottom: var(--global--spacing-vertical);
-}
-
-.entry-content > .alignleft {
-	max-width: var(--responsive--aligndefault-width);
 }
 
 /**
